--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ header {
 .wrap {
   width: 80%;
   margin: auto;
-  position: relative;
+  border: 2px solid red;
 }
 
 .title {
@@ -46,5 +46,45 @@ header {
   .title__two {
     bottom: -40px;
     right: -30%;
+  }
+}
+
+.introduction {
+  padding: 50px 0;
+  background-color: #7da2a9;
+}
+
+.title__wrap {
+  margin-bottom: 50px;
+  text-align: right;
+}
+
+.title__wrap_text {
+  font-size: 2rem;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.title__wrap_subtext {
+  font-size: 1.5rem;
+}
+
+.introduction__text {
+  color: white;
+}
+@media (min-width: 800px) {
+  .intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    max-width: 800px;
+  }
+  div.title__wrap {
+    margin-bottom: 0px;
+    width: 30%;
+  }
+  .introduction__text {
+    width: 70%;
   }
 }
