--- a/styles/style.css
+++ b/styles/style.css
@@ -88,3 +88,16 @@ header {
     width: 70%;
   }
 }
+
+.courses {
+  padding: 50px 0;
+}
+
+.courses__title {
+  margin-bottom: 10px;
+}
+
+.courses__title,
+.courses__subtext {
+  text-align: center;
+}
