--- a/styles/style.css
+++ b/styles/style.css
@@ -101,3 +101,31 @@ header {
 .courses__subtext {
   text-align: center;
 }
+
+.courses ul {
+  margin-top: 80px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.courses li {
+  border: 1px solid black;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 40%;
+}
+
+.courses_list__item__title {
+  font-size: 1.5rem;
+}
+
+.courses img {
+  width: 40px;
+}
