--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ header {
 .wrap {
   width: 80%;
   margin: auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .title {
@@ -50,7 +50,7 @@ header {
 }
 
 .introduction {
-  padding: 50px 0;
+  padding: 80px 0;
   background-color: #7da2a9;
 }
 
@@ -124,13 +124,13 @@ header {
 }
 
 .courses li {
-  border: 1px solid black;
   display: flex;
   gap: 10px;
   flex-direction: column;
   justify-content: center;
   align-items: left;
   width: 40%;
+  min-width: 125px;
 }
 
 .courses_list__item__title {
@@ -139,4 +139,29 @@ header {
 
 .courses img {
   width: 40px;
+}
+
+.web_sites {
+  background-color: black;
+  padding: 80px 0;
+}
+
+.sites {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.img_wrap {
+  width: 300px;
+}
+
+.web_sites img {
+  width: 100%;
+}
+
+.web_sites__title {
+  color: white;
+  margin-top: 40px;
 }
