--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ header {
 .wrap {
   width: 80%;
   margin: auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .title {
@@ -152,6 +152,7 @@ header {
   justify-content: center;
   align-items: center;
   color: white;
+  margin-bottom: 50px;
 }
 
 .img_wrap {
@@ -160,6 +161,10 @@ header {
 
 .web_sites img {
   width: 100%;
+}
+
+.web_sites a {
+  display: block;
 }
 
 .web_sites__title {
@@ -179,4 +184,44 @@ header {
   .text_wrap {
     width: 45%;
   }
+}
+
+.sites__list {
+  background-color: white;
+  padding: 15px 0;
+}
+
+.web_sites__list {
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.web_sites__list li {
+  box-shadow: 2px 2px 3px rgb(98, 98, 98);
+  width: 300px;
+}
+
+.web_sites__list img {
+  width: 100%;
+}
+
+@media (min-width: 820px) {
+  .web_sites__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+footer {
+  text-align: center;
+  color: white;
+  background: grey;
+  height: 5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
