--- a/javajam/styles/styles.css
+++ b/javajam/styles/styles.css
@@ -7,7 +7,7 @@ header {
   background: url("../images/mike-kenneally-TD4DBagg2wE-unsplash.jpg") no-repeat
     center;
   background-size: cover;
-  height: 30vh;
+  height: 40vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,5 +32,63 @@ header {
   .title_card {
     width: auto;
     padding: 50px;
+  }
+}
+
+.navigation {
+  padding: 40px 0;
+}
+
+.navigation__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 20px;
+}
+
+.navigation__list li {
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px rgb(86, 86, 86);
+}
+
+.navigation__list a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  padding: 8px;
+}
+
+.navigation__list a:hover,
+.navigation__list a:active {
+  color: white;
+}
+
+.navigation__list li:hover {
+  background-color: black;
+}
+
+@media (min-width: 700px) {
+  .navigation__list {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .navigation__list a {
+    color: white;
+  }
+
+  .navigation__list a:active,
+  .navigation__list a:hover {
+    color: black;
+  }
+  .navigation__list li {
+    border-color: white;
+    box-shadow: 2px 2px 2px rgb(150, 150, 150);
+  }
+
+  .navigation__list li:hover {
+    background-color: white;
   }
 }
