--- a/javajam/styles/shared.css
+++ b/javajam/styles/shared.css
@@ -11,14 +11,30 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 0;
 }
 
 .title_card {
-  background-color: rgba(255, 255, 255, 0.35);
+  background-color: rgba(133, 133, 133, 0.85);
   width: 80%;
   padding: 20px 0;
   text-align: center;
+  position: relative;
 }
+
+.title_card::after {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.65);
+  content: "x";
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  z-index: -1;
+}
+
 .page_title {
   color: white;
 }
