--- a/javajam/styles/main.css
+++ b/javajam/styles/main.css
@@ -14,6 +14,32 @@ main {
   font-size: 2.5rem;
 }
 
+.flex_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+  /* border: 1px solid red; */
+}
+
+@media (min-width: 1000px) {
+  .flex_container {
+    flex-direction: row;
+    align-items: stretch;
+    gap: 50px;
+  }
+  .flex_container_content1,
+  .flex_container_content2 {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid green; */
+  }
+}
+
 .coffee_wrap {
   height: 200px;
   width: 400px;
@@ -33,6 +59,7 @@ main {
 
 main ul {
   list-style: none;
+  font-size: 1.4rem;
 }
 
 .coffee_wrap__bottom {
@@ -42,4 +69,15 @@ main ul {
   background-size: cover;
   border-radius: 0 0 400px 400px;
   margin: 50px auto 0;
+}
+
+.contact {
+  background-color: black;
+  color: white;
+  padding: 25px;
+  text-align: center;
+}
+
+.contact p {
+  margin: 10px 0;
 }
