--- a/javajam/styles/menu.css
+++ b/javajam/styles/menu.css
@@ -39,6 +39,7 @@ dd {
 }
 .ds_item {
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
@@ -46,7 +47,7 @@ dd {
   height: 200px;
   padding: 15px;
   border-radius: 10px;
-  box-shadow: 1px 1px 3px rgb(189, 189, 189);
+  box-shadow: 2px 2px 6px rgb(189, 189, 189);
   background-color: white;
 }
 
@@ -75,9 +76,6 @@ footer a {
 @media (min-width: 800px) {
   dl {
     flex-direction: row;
-  }
-  .ds_item {
-    width: auto;
   }
 
   footer {
