--- a/personal_page/styles/style.css
+++ b/personal_page/styles/style.css
@@ -198,6 +198,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  list-style: none;
 }
 
 .web_sites__list li {
