--- a/personal_page/styles/style.css
+++ b/personal_page/styles/style.css
@@ -26,8 +26,9 @@ header {
 
 .title {
   text-align: center;
-  color: white;
+  color: #547af7;
   font-size: 3.5rem;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.55);
 }
 
 @media (min-width: 780px) {
@@ -61,7 +62,7 @@ header {
 
 .title__wrap_text {
   font-size: 2rem;
-  color: white;
+  color: #d61425;
   margin-bottom: 10px;
 }
 
