--- a/personal_page/styles/style.css
+++ b/personal_page/styles/style.css
@@ -96,6 +96,14 @@ header {
 
 .courses__title {
   margin-bottom: 10px;
+  background-image: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .courses__title,
@@ -169,7 +177,7 @@ header {
 }
 
 .web_sites__title {
-  color: white;
+  color: #547af7;
   margin-top: 40px;
   margin-bottom: 30px;
 }
